public/assets/css/style.css
/* ... */
@media only screen and (min-width: 1400px) and (max-width: 1700px), only screen and (min-width: 1200px) and (max-width: 1399px) {
  .portfolio__shape img.portfolio-s-3 {
    right: 4%;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px) {
  .portfolio__shape img.portfolio-s-3 {
    right: 3%;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__shape img.portfolio-s-3 {
    right: 6%;
  }
}
.portfolio__shape img.portfolio-s-4 {
  bottom: 0%;
  left: 12.5%;
  max-width: 112px;
  z-index: 6;
  mix-blend-mode: multiply;
}
.viewMore{
  margin-left: 45%;
}
@media only screen and (min-width: 1400px) and (max-width: 1700px), only screen and (min-width: 1200px) and (max-width: 1399px) {
  .portfolio__shape img.portfolio-s-4 {
    left: 2%;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .portfolio__shape img.portfolio-s-4 {
    left: 4%;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__shape img.portfolio-s-4 {
    bottom: 13%;
    left: 10%;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .portfolio__shape img.portfolio-s-4 {
    bottom: 0%;
  }
  .viewMore{
    margin-left: 35%;
  }
}

.portfolio__shape-2 img {
  position: absolute;
}
.portfolio__shape-2 img.p-s-1 {
  top: 15%;
  left: 5%;
  max-width: 119px;
}
@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px) {
  .portfolio__shape-2 img.p-s-1 {
    left: 1%;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .portfolio__shape-2 img.p-s-1 {
    top: 9%;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__shape-2 img.p-s-1 {
    top: 11%;
  }
}
.portfolio__shape-2 img.p-s-2 {
  top: 9%;
  left: 16%;
  max-width: 104px;
}
@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px) {
  .portfolio__shape-2 img.p-s-2 {
    left: 9%;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__shape-2 img.p-s-2 {
    top: 2%;
    left: 5%;
  }
}
@media (max-width: 575px) {
  .portfolio__shape-2 img.p-s-2 {
    top: 1%;
    left: 4%;
  }
}
.portfolio__shape-2 img.p-s-3 {
  top: 7%;
  right: 14%;
  max-width: 110px;
}
@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px) {
  .portfolio__shape-2 img.p-s-3 {
    right: 3%;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__shape-2 img.p-s-3 {
    top: 2%;
    right: 3%;
  }
}
.portfolio__shape-2 img.p-s-4 {
  top: 14%;
  right: 21%;
  max-width: 94px;
}
@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px) {
  .portfolio__shape-2 img.p-s-4 {
    right: 11%;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__shape-2 img.p-s-4 {
    top: 9%;
    right: 6%;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__shape-2 img.p-s-4 {
    top: 11%;
  }
}
@media (max-width: 575px) {
  .portfolio__shape-2 img.p-s-4 {
    top: 13%;
    right: 8%;
  }
}
.portfolio__shape-2 img.p-s-5 {
  top: 47%;
  right: 10%;
  max-width: 29px;
  -webkit-animation: hero-shape-2 2s linear 0s infinite alternate;
  -moz-animation: hero-shape-2 2s linear 0s infinite alternate;
  -o-animation: hero-shape-2 2s linear 0s infinite alternate;
  animation: hero-shape-2 2s linear 0s infinite alternate;
}
.portfolio__wrapper::before {
  position: absolute;
  content: "";
  width: 1308px;
  height: 338px;
  background: #7432ff;
  left: 0;
  border-radius: 0 164px 20px 0;
  -webkit-border-radius: 0 164px 20px 0;
  -moz-border-radius: 0 164px 20px 0;
  -ms-border-radius: 0 164px 20px 0;
  -o-border-radius: 0 164px 20px 0;
  z-index: -1;
}
@media only screen and (min-width: 1400px) and (max-width: 1700px), only screen and (min-width: 1200px) and (max-width: 1399px) {
  .portfolio__wrapper::before {
    width: 1108px;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .portfolio__wrapper::before {
    width: 990px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .portfolio__wrapper::before {
    width: 100%;
  }
}
.portfolio__content {
  padding-top: 90px;
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .portfolio__content {
    padding-top: 50px;
  }
}
.portfolio__title .section__sub-title {
  color: #f2dac0;
}
.portfolio__title .section__title {
  color: #ffffff;
}
.portfolio__title .section__title span::after {
  background: #8b61ff;
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__title-2 .section__title span {
    display: inline;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .portfolio__title-2 .section__title span::after {
    display: none;
  }
}
.portfolio__menu{   
  padding-top: 22px;
  position: relative;
  z-index: 4;   
  border: none;  
}
.portfolio__menu li:not(:last-child) {  
  margin-right: 35px;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .portfolio__menu li:not(:last-child) {
    margin-right: 25px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
  .portfolio__menu li:not(:last-child) {
    margin-right: 20px;
  }
}
/* ... */

